# autochthon

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  aliases.zsh  build_atlas.py  config.toml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup.cfg  start.py  stats  stats2  whitelist.py
.github/workflows/: ci.yml
constants/: tile_ids.py
constants/messages/: combat.py  status.py
data/: config.json  default_config.toml  keybindings.toml  keys.json  websocketevents.json
data/entities/: basic.json
data/layout/: test.json  test_rexpaint.json
data/map/: test1.xp  test2.xp
game/: __init__.py  data.py  dataloader.py  events.py  factory.py  game.py  input.py  level_layout.py  local.py  loop.py  main.py  map.py  palette.py  render.py  server.py  state.py  tile_ids.py  tile_utils.py  types.py  world.py
game/command/: base.py  drop.py  equip.py  inventory.py  pickup.py  show_log.py
game/component/: action.py  actor.py  ai.py  ai_simplemind.py  attack.py  attacking.py  attribute.py  base.py  base_action_costs.py  base_components.py  container.py  damage.py  dead.py  descriptive.py  gamelog.py  hp.py  movement.py  moving.py  player.py  player_bump.py  player_controlled.py  (+10 more)
gamedata/: base_engine_values.py  config.py  palette.py  tile_ids.py
static/: config.json  keys.json
stubs/: esper.pyi  tcod.pyi
templates/: index.html
test/: test_dummy.py  test_random.py
tools/: assemblage_edit.py  build_atlas.py  entity_edit.py  make_tile_ids.py  map_visualizer.py
typeshed/: esper.pyi  pydoc.pyi  toml.pyi
(+181 files in other folders)
