[tool.poetry]
name = "autochthon"
version = "0.1.0"
description = "a roguelike dungeon crawler"
authors = ["scott <dev@cracklebones.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tdl = "^6.0"
tornado = "^6.0"
esper = "^1.2"

[tool.poetry.dev-dependencies]
PySide2 = "^5.13"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
bump2version = "^0.5.11"
mypy = "^0.720.0"
vulture = "^1.0"
isort = "^4.3"
flake8 = "^3.7"
pytest = "^5.1"
pytest-cov = "^2.7"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
