[tool.poetry]
name = "autochthon"
version = "0.1.0"
description = "a roguelike dungeon crawler"
authors = ["scott <dev@cracklebones.com>"]

[tool.poetry.dependencies]
python = "^3.8"
esper = "^1.2"
bearlibterminal = "^0.15.7"
toml = "^0.10.0"
appdirs = "^1.4"
tcod = "^11.4"

[tool.poetry.dev-dependencies]
PySide2 = "^5.13"
black = {version = "^19.3b0", allows-prereleases = true}
bump2version = "^0.5.11"
mypy = "^0.730.0"
vulture = "^1.0"
isort = "^4.3"
flake8 = "^3.7"
pytest = "^5.1"
pytest-cov = "^2.7"
snakeviz = "^2.0"
pprofile = "^2.0"
pre-commit = "^1.18"
importlib-metadata = "^0.23.0"
[tool.black]
line-length = 99
target_version = ["py37"]
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.tox
    | build
    | dist
  )/
  | whitelist.py
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

